# cmakegen

./: CMakeLists.txt
inc/: files.h  main.h  paths.h
src/: CMakeLists.txt  main.c  paths.c
src/files/: CMakeLists.txt
src/files/inc/: directories.h  files.h
src/files/src/: directories.c  files.c
src/main/: CMakeLists.txt
src/main/inc/: main.h
src/main/src/: main.c
src/modules/: CMakeLists.txt
src/modules/inc/: modules.h
src/modules/src/: modules.c
